# aeroroute-mlx

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  model-manifest.example.json  pyproject.toml
configs/: gemma3-4b-smoke.json
docs/: NATIVE_BENCHMARK_2026-06-27.md  NATIVE_BENCHMARK_2026-07-09.md  QUALITY_CORPUS_2026-07-09.md  quality-corpus-2026-07-09.json
scripts/: benchmark_mlx.py  quality_corpus.py
src/aeroroute_mlx/: __init__.py  contracts.py  fallback.py  generation.py  local_adapter.py  main.py  model.py  prompt_builder.py  validator.py
tests/contract/: test_adapter_fallback.py  test_explanations.py
tests/unit/: test_fallback.py  test_generation.py  test_local_adapter.py  test_model.py  test_validator.py
