[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "aeroroute-mlx"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn>=0.30"]
[project.optional-dependencies]
mlx = ["mlx-lm"]
[dependency-groups]
dev = ["httpx>=0.28", "pytest>=8.0", "ruff>=0.11"]
[tool.ruff]
line-length = 80
